--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -24,7 +24,32 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
+        include:
+          # PHP 5.6 - 使用 Dockerfile.php56
+          - php-version: '5.6'
+            dockerfile: Dockerfile.php56
+          # PHP 7.0 - 7.3 - 使用 Dockerfile.php7
+          - php-version: '7.0'
+            dockerfile: Dockerfile.php7
+          - php-version: '7.1'
+            dockerfile: Dockerfile.php7
+          - php-version: '7.2'
+            dockerfile: Dockerfile.php7
+          - php-version: '7.3'
+            dockerfile: Dockerfile.php7
+          # PHP 7.4+ - 使用默认 Dockerfile
+          - php-version: '7.4'
+            dockerfile: Dockerfile
+          - php-version: '8.0'
+            dockerfile: Dockerfile
+          - php-version: '8.1'
+            dockerfile: Dockerfile
+          - php-version: '8.2'
+            dockerfile: Dockerfile
+          - php-version: '8.3'
+            dockerfile: Dockerfile
+          - php-version: '8.4'
+            dockerfile: Dockerfile
 
     permissions:
       contents: read
@@ -33,6 +58,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -57,6 +85,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ${{ matrix.dockerfile }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
