docs: 完善构建工作流文档说明

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,34 +1,123 @@
+# ============================================================================
+# 🐳 Ultimate PHP Docker - 多版本 PHP 镜像自动构建与推送
+# ============================================================================
+#
+# 📋 功能说明:
+#   自动构建 Nginx + PHP-FPM 一体化 Docker 镜像，覆盖 PHP 5.6 ~ 8.4 全版本，
+#   推送至 GitHub Container Registry (ghcr.io)，开箱即用。
+#
+# 🎯 使用场景:
+#   1. ThinkPHP 5/6/8 项目的容器化部署
+#   2. Laravel 5~12 项目的容器化部署
+#   3. 老旧 PHP 项目的维护（PHP 5.6/7.x 兼容镜像）
+#   4. CI/CD 流水线中作为基础运行环境
+#   5. 本地开发环境快速搭建（替代 XAMPP/WAMP/宝塔）
+#
+# 🚀 触发方式:
+#   - 推送到 main 分支 → 自动构建全部 11 个 PHP 版本的镜像
+#   - 手动触发 → 在 GitHub Actions 页面点击 "Run workflow" 按钮
+#
+# 📦 镜像拉取示例:
+#   docker pull ghcr.io/elijah-hall-asdq1/ultimate-php-docker:php-8.3
+#
+# 🏃 快速运行示例:
+#   docker run -d -p 8080:80 -v $(pwd)/my-project:/var/www/html \
+#     ghcr.io/elijah-hall-asdq1/ultimate-php-docker:php-8.3
+#
+# 📁 容器内目录结构:
+#   /var/www/html/          ← 挂载你的项目到这里
+#   /var/www/html/public/   ← Nginx Web 根目录（ThinkPHP/Laravel 标准入口）
+#
+# ⚠️ 注意事项:
+#   - 需要在仓库 Settings → Packages 中确保 GITHUB_TOKEN 有 packages:write 权限
+#   - 首次推送后需要到 Packages 页面将镜像可见性设为 Public（如需公开访问）
+#   - PHP 5.6/7.0~7.3 已经 EOL，仅用于维护老旧项目，新项目请使用 8.1+
+#   - 构建支持 linux/amd64 和 linux/arm64 双架构（兼容 Apple Silicon Mac）
+#
+# ============================================================================
+
 name: Build and Push PHP Docker Images
 
 on:
-  # 推送到 main 分支自动触发
+  # -------------------------------------------------------
+  # 触发条件 1: 推送到 main 分支自动触发
+  # -------------------------------------------------------
+  # 适用场景: 修改了 Dockerfile、config/ 配置、或工作流本身后，
+  #          推送代码即自动重新构建所有镜像，保持镜像与源码同步。
   push:
     branches: [main]
 
-  # 手动触发（可在 Actions 页面点击 Run workflow）
+  # -------------------------------------------------------
+  # 触发条件 2: 手动触发（可在 Actions 页面点击 Run workflow）
+  # -------------------------------------------------------
+  # 适用场景:
+  #   - 需要单独重建某个版本的镜像（如 PHP 发布安全补丁后）
+  #   - 排查特定版本的构建问题
+  #   - 不想修改代码但需要重新推送镜像（如 ghcr.io 清理后恢复）
   workflow_dispatch:
     inputs:
       php_versions:
-        description: '要构建的 PHP 版本（逗号分隔，留空则构建全部）'
+        description: '要构建的 PHP 版本（逗号分隔，留空则构建全部）示例: 8.3,8.2'
         required: false
         default: ''
 
+# ============================================================================
+# 全局环境变量
+# ============================================================================
 env:
+  # GitHub Container Registry 地址
   REGISTRY: ghcr.io
+  # 镜像名称，自动从 github.repository 获取（格式: owner/repo）
+  # 最终镜像地址: ghcr.io/elijah-hall-asdq1/ultimate-php-docker:php-X.X
   IMAGE_NAME: ${{ github.repository }}
 
+# ============================================================================
+# 构建任务
+# ============================================================================
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    # ------------------------------------------------------------------
+    # 构建矩阵 - 定义所有要构建的 PHP 版本及对应的 Dockerfile
+    # ------------------------------------------------------------------
+    # 📝 为什么需要三个 Dockerfile？
+    #   - Dockerfile        → PHP 7.4+: GD 扩展使用新配置语法 (--with-freetype --with-jpeg)
+    #   - Dockerfile.php7   → PHP 7.0~7.3: GD 使用旧语法 (--with-freetype-dir --with-jpeg-dir)
+    #   - Dockerfile.php56  → PHP 5.6: 需额外安装 mysql/mcrypt 扩展，且 Redis 版本受限
+    #
+    # 💡 如何新增 PHP 版本？
+    #   在 matrix.include 中添加一条记录即可，例如:
+    #     - php-version: '8.5'
+    #       dockerfile: Dockerfile
+    #
+    # 🔧 fail-fast: false 表示某个版本构建失败不影响其他版本继续构建
     strategy:
       fail-fast: false
       matrix:
         include:
+          # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           # PHP 5.6 - 使用 Dockerfile.php56
+          # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+          # 📌 适用框架: ThinkPHP 5（早期版本）
+          # ⚠️ 已 EOL，仅供维护老旧项目使用！
+          # 🔧 特殊点: 包含已废弃的 mysql 扩展 和 mcrypt 扩展
+          # 🔧 Composer: v2.2（最后支持 PHP 5.6 的版本）
+          # 🔧 Redis 扩展: v4.3.0（最后支持 PHP 5.6 的版本）
           - php-version: '5.6'
             dockerfile: Dockerfile.php56
+
+          # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           # PHP 7.0 - 7.3 - 使用 Dockerfile.php7
+          # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+          # 📌 适用框架: ThinkPHP 5/6, Laravel 5~7
+          # ⚠️ 已 EOL，建议尽快升级到 8.x 系列
+          # 🔧 GD 扩展使用旧配置语法 (--with-freetype-dir)
+          # 🔧 Composer: v2.2 | Redis 扩展: v5.3.7
+          # 💡 使用场景:
+          #   - ThinkPHP 5 项目迁移过渡期
+          #   - Laravel 5.x/6.x 老项目维护
+          #   - 依赖了只兼容 PHP 7.x 的第三方库
           - php-version: '7.0'
             dockerfile: Dockerfile.php7
           - php-version: '7.1'
@@ -37,34 +126,89 @@ jobs:
             dockerfile: Dockerfile.php7
           - php-version: '7.3'
             dockerfile: Dockerfile.php7
+
+          # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
           # PHP 7.4+ - 使用默认 Dockerfile
+          # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+          # 🔧 GD 扩展使用新配置语法 (--with-freetype --with-jpeg)
+          # 🔧 Composer: latest | Redis 扩展: latest
+
+          # PHP 7.4
+          # 📌 适用框架: ThinkPHP 5/6, Laravel 6~8
+          # 💡 使用场景: ThinkPHP 6 项目的保守选择，兼容性最广
           - php-version: '7.4'
             dockerfile: Dockerfile
+
+          # PHP 8.0
+          # 📌 适用框架: ThinkPHP 6/8, Laravel 8~9
+          # 💡 使用场景: 开始使用 PHP 8 新特性（命名参数、match 表达式等）
           - php-version: '8.0'
             dockerfile: Dockerfile
+
+          # PHP 8.1 ⭐ 推荐 - LTS 级稳定性
+          # 📌 适用框架: ThinkPHP 6/8, Laravel 9~10
+          # 💡 使用场景: 生产环境稳定首选，枚举/Fiber/只读属性等新特性
           - php-version: '8.1'
             dockerfile: Dockerfile
+
+          # PHP 8.2
+          # 📌 适用框架: ThinkPHP 8, Laravel 10~11
+          # 💡 使用场景: 新项目推荐，只读类、DNF 类型等现代特性
           - php-version: '8.2'
             dockerfile: Dockerfile
+
+          # PHP 8.3 ⭐ 推荐 - 新项目首选
+          # 📌 适用框架: ThinkPHP 8, Laravel 11~12
+          # 💡 使用场景: 新项目首选版本，类常量类型、json_validate 等
           - php-version: '8.3'
             dockerfile: Dockerfile
+
+          # PHP 8.4 - 最新版本
+          # 📌 适用框架: ThinkPHP 8, Laravel 12
+          # 💡 使用场景: 尝鲜最新特性（属性钩子、不对称可见性等）
+          # ⚠️ 部分第三方库可能尚未完全兼容
           - php-version: '8.4'
             dockerfile: Dockerfile
 
+    # ------------------------------------------------------------------
+    # 权限配置
+    # ------------------------------------------------------------------
+    # contents: read  → 拉取仓库代码
+    # packages: write → 推送 Docker 镜像到 ghcr.io
     permissions:
       contents: read
       packages: write
 
     steps:
+      # ================================================================
+      # Step 1: 拉取仓库代码
+      # ================================================================
+      # 将整个仓库代码（Dockerfile、config/、脚本等）检出到 runner 上
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # ================================================================
+      # Step 2: 设置 QEMU 模拟器
+      # ================================================================
+      # 📝 用途: 支持多架构构建（linux/amd64 + linux/arm64）
+      # 💡 场景: 让镜像同时支持 Intel/AMD 服务器和 Apple Silicon Mac
+      # ⚠️ arm64 构建会比 amd64 慢 2~3 倍（因为是模拟执行）
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
+      # ================================================================
+      # Step 3: 设置 Docker Buildx
+      # ================================================================
+      # 📝 用途: 启用 Docker Buildx 高级构建功能
+      # 💡 提供: 多平台构建、构建缓存、并行构建层等能力
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # ================================================================
+      # Step 4: 登录 GitHub Container Registry
+      # ================================================================
+      # 📝 使用 GITHUB_TOKEN 自动认证，无需额外配置 Secret
+      # ⚠️ GITHUB_TOKEN 的权限通过上方 permissions 配置控制
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -72,6 +216,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # ================================================================
+      # Step 5: 提取镜像元数据（标签 & 标注）
+      # ================================================================
+      # 📝 自动生成镜像标签，格式如下:
+      #   - php-8.3          → 固定标签，始终指向最新构建
+      #   - php-8.3-20260211 → 日期标签，用于版本追溯和回滚
+      #
+      # 💡 使用场景:
+      #   - 生产环境: 使用日期标签锁定版本，避免自动更新带来的风险
+      #     docker pull ghcr.io/elijah-hall-asdq1/ultimate-php-docker:php-8.3-20260211
+      #   - 开发环境: 使用固定标签，始终获取最新版本
+      #     docker pull ghcr.io/elijah-hall-asdq1/ultimate-php-docker:php-8.3
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -81,6 +237,23 @@ jobs:
             type=raw,value=php-${{ matrix.php-version }}
             type=raw,value=php-${{ matrix.php-version }}-{{date 'YYYYMMDD'}}
 
+      # ================================================================
+      # Step 6: 构建并推送 Docker 镜像
+      # ================================================================
+      # 📝 核心步骤说明:
+      #   - context: .                → 使用仓库根目录作为构建上下文
+      #   - file: matrix.dockerfile   → 根据 PHP 版本选择对应 Dockerfile
+      #   - build-args: PHP_VERSION   → 通过 ARG 传入 PHP 具体版本号
+      #   - platforms: amd64 + arm64  → 同时构建两种 CPU 架构的镜像
+      #
+      # 🚀 缓存策略:
+      #   - cache-from/cache-to: 使用 GitHub Actions Cache (GHA) 作为构建缓存
+      #   - mode=max: 缓存所有构建层（而不仅仅是最终结果），最大化缓存命中率
+      #   - 首次构建约 5~8 分钟/版本，后续增量构建约 1~2 分钟/版本
+      #
+      # 💡 调试技巧:
+      #   - 如果构建失败，检查对应 Dockerfile 中的 apk 包是否在 alpine 仓库中可用
+      #   - PHP 老版本的 alpine 基础镜像可能不再更新，若出问题可考虑切换为 debian 基础镜像
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
